--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: "Quicksand", sans-serif;
     margin: 0;
@@ -14,8 +18,18 @@ h3 {
     color: #00a2c6;
 }
 
-main{
+header{
+    display: inline;
+}
+
+main {
     padding: 20px;
+    overflow: auto;
+}
+
+#content {
+    float: left;
+    width: 75%;
 }
 
 footer {
@@ -29,6 +43,8 @@ footer {
 nav {
     background-color: #00a2c6;
     padding: 5px;
+    position: sticky;
+    top: 0;
 }
 
 nav a {
@@ -46,6 +62,12 @@ nav li {
     display: inline;
     list-style-type: none;
     margin-right: 20px;
+}
+
+aside {
+    float: right;
+    width: 25%;
+    padding-left: 20px;
 }
 
 .profile header {
@@ -76,4 +98,13 @@ nav li {
     text-align: center;
     font-size: 20px;
     color: white;
+}
+
+@media screen and (max-width: 1000px) {
+
+    #content,
+    aside {
+        width: 100%;
+        padding: 0;
+    }
 }
